Update linuxprinting.org -> openprinting.org

--- a/AUTHORS
+++ b/AUTHORS
@@ -85,7 +85,6 @@ Mike Sweet		<mike@easysw.com>
 	CUPS front end
 	Portability
 	Lots o'details
-	4.0 maintainer
 
 Peter Missel		<peter.missel@eplus-online.de>
 	Canon driver
@@ -118,5 +117,5 @@ Steve Miller		<smiller@rni.net>
 Thomas Tonino		<ttonino@bio.vu.nl>
 	Vastly improved dithering and color management
 
-Till Kamppeter		<till.kamppeter@gmx.net>
+Till Kamppeter		<till.kamppeter@gmail.com>
 	Foomatic interface
