--- a/NEWS
+++ b/NEWS
@@ -557,7 +557,7 @@ B) BUILD/INSTALLATION ISSUES
 	you install a new version of Gutenprint.
 
 	Please check the Foomatic site
-	(http://www.linuxprinting.org/foomatic.html) and the Gutenprint
+	(http://www.openprinting.org/foomatic.html) and the Gutenprint
 	site (http://gimp-print.sourceforge.net) for updated
 	instructions about this.
 
