Updated linuxprinting.org -> openprinting.org

--- a/AUTHORS
+++ b/AUTHORS
@@ -118,5 +118,5 @@ Steve Miller		<smiller@rni.net>
 Thomas Tonino		<ttonino@bio.vu.nl>
 	Vastly improved dithering and color management
 
-Till Kamppeter		<till.kamppeter@gmx.net>
+Till Kamppeter		<till.kamppeter@gmail.com>
 	Foomatic interface
