Message catalogs need to be in UTF-8 encoding so that the PPD files use the correct encoding for CUPS.
nl.po is Dutch, not Norwegian...

--- a/po/nl.po
+++ b/po/nl.po
@@ -6485,7 +6485,7 @@ msgstr "Extra 5"
 #. * "Svenska".
 #: src/cups/genppd.c:1052
 msgid "English"
-msgstr "Norwegian"
+msgstr "Dutch"
 
 #. TRANSLATORS: Specify PPD translation encoding e.g. ISOLatin1
 #: src/cups/genppd.c:1054
