--- a/NEWS
+++ b/NEWS
@@ -125,15 +125,6 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
        Epson Stylus C87+
        Epson Stylus Photo R230
        Epson Stylus Photo R350
-
-  2) Preliminary support for the following printers:
-
-     * Epson inkjet printers:
-
-       Epson Stylus Photo 1400
-       Epson Stylus Photo 1410
-       Epson Stylus Photo R240
-       Epson Stylus Photo R245
        Epson Stylus Photo R260
        Epson Stylus Photo R265
        Epson Stylus Photo R270
@@ -146,6 +137,30 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
        Epson PM A820
        Epson PM D870
        Epson PM G850
+
+  2) Preliminary support for the following printers:
+
+     * Epson inkjet printers:
+
+       Epson Stylus Photo 1400
+       Epson Stylus Photo 1410
+       Epson Stylus Photo R240
+       Epson Stylus Photo R245
+
+  3) A minor border problem with the R800 and related printers has
+     been fixed.  The standard bottom border is now slightly wider to
+     eliminate the very bottom of the print from being chopped off.
+
+  4) Some Canon printers have been renamed from "Multipass" to
+     "Pixma".
+
+  5) A build problem with the CUPS driver on some systems (in
+     particular, OS X and any system where --disable-nls is used) has
+     been fixed.
+
+  6) The CUPS PPD files now use the correct UTF-8 encoding.
+
+  7) Printing to CD's has been re-enabled for the Canon PIXMA iP4200.
 
 
 ----------------
