Add Epson PM-G4500.

--- a/NEWS
+++ b/NEWS
@@ -137,6 +137,7 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
        Epson PM A820
        Epson PM D870
        Epson PM G850
+       Epson PM G4500
 
   2) Preliminary support for the following printers:
 
