--- a/NEWS
+++ b/NEWS
@@ -123,6 +123,8 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
        Epson Picturemate PM-280
        Epson Stylus C79+
        Epson Stylus C87+
+       Epson Stylus Photo 1400
+       Epson Stylus Photo 1410
        Epson Stylus Photo R230
        Epson Stylus Photo R350
        Epson Stylus Photo R260
@@ -143,8 +145,6 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
 
      * Epson inkjet printers:
 
-       Epson Stylus Photo 1400
-       Epson Stylus Photo 1410
        Epson Stylus Photo R240
        Epson Stylus Photo R245
 
@@ -163,13 +163,17 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
 
   7) Printing to CD's has been re-enabled for the Canon PIXMA iP4200.
 
-  8) CD printing for the Canon PIXMA iP4000 has been fixed 
+  8) CD printing for the Canon PIXMA iP4000 has been fixed.
 
-  9) The Canon driver now also supports the CD fine adjustment controls
+  9) The Canon driver now also supports the CD fine adjustment controls.
 
- 10) The resolutions for the Canon S300 have been fixed
+  10) The resolutions for the Canon S300 have been fixed.
  
- 11) Printing to Canon PIXMA printers that are connected to windows hosts has been fixed (#1625202)
+  11) Printing to Canon PIXMA printers that are connected to Microsoft
+     Windows hosts has been fixed (bug 1625202).
+
+  12) The Postscript driver now handles CMYK input correctly, fixing a
+     problem with Cinepaint (bug 1701954).
 
 
 ----------------
