Rename more Canon printers.

--- a/NEWS
+++ b/NEWS
@@ -218,16 +218,16 @@ B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.0:
        Canon PIXMA iP5000
        Canon PIXMA iP5200
        Canon PIXMA iP6700
-       Canon MULTIPASS MP150
-       Canon MULTIPASS MP500
-       Canon MULTIPASS MP700
-       Canon MULTIPASS MP730
-       Canon MULTIPASS MP750
-       Canon MULTIPASS MP760
-       Canon MULTIPASS MP770
-       Canon MULTIPASS MP780
-       Canon MULTIPASS MP790
-       Canon MULTIPASS MP830
+       Canon PIXMA MP150
+       Canon PIXMA MP500
+       Canon PIXMA MP700
+       Canon PIXMA MP730
+       Canon PIXMA MP750
+       Canon PIXMA MP760
+       Canon PIXMA MP770
+       Canon PIXMA MP780
+       Canon PIXMA MP790
+       Canon PIXMA MP830
        Canon PIXUS iP3100
        Canon PIXUS iP4100
        Canon i560
