--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Welcome to Gutenprint 5.1.2!  Please read these release notes
+Welcome to Gutenprint 5.1.3!  Please read these release notes
 carefully.
 
 Gutenprint, formerly named Gimp-Print, is a suite of printer drivers
@@ -22,7 +22,7 @@ Gutenprint recognizes Johannes Gutenberg, the inventor of the movable
 type printing press.  Finally, the word "guten" means "good" in
 German.
 
-Gutenprint 5.1.2 is a development release of Gutenprint 5.1.  It is
+Gutenprint 5.1.3 is a development release of Gutenprint 5.1.  It is
 based on Gutenprint 5.0.0.
 
 Gutenprint currently supports over 800 printer models.
@@ -31,9 +31,10 @@ These release notes contain the following sections:
 
 I)    General Requirements
 II)   Changes from Previous Releases
-	A) New features in 5.1.2
-	B) New features in 5.1.1
-	C) New features in 5.1.0
+	A) New features in 5.1.3
+	B) New features in 5.1.2
+	C) New features in 5.1.1
+	D) New features in 5.1.0
 III)   Exceptions and Workarounds
 	A) General Issues
 	B) Build/Installation Issues
@@ -108,7 +109,28 @@ for building and installing Gutenprint.
 
 II) MAJOR CHANGES FROM PREVIOUS RELEASES
 
-C) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.2:
+A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.3:
+
+  1) The Canon PIXMA iP4300 and related printers now print black
+     properly.
+
+  2) Margins have been improved for Canon PIXMA printers.
+
+  3) Borderless printing has been improved for many of the Epson
+     R200/R300 series printers and related multifunction devices.
+
+  4) A build problem on certain systems has been fixed.
+
+
+KNOWN LIMITATIONS IN GUTENPRINT 5.1.3:
+
+  1) The Postscript driver does not send device-specific settings
+     (e. g. media type).  We are investigating solutions for this.
+
+
+----------------
+
+B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.2:
 
   1) Improved tunings for Epson printers using Claria inks.
 
@@ -138,15 +160,10 @@ C) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.2:
   7) Printing to CD's on Epson printers now works correctly if the
      image is not placed at the top of the page.
 
-KNOWN LIMITATIONS IN GUTENPRINT 5.1.2:
-
-  1) The Postscript driver does not send device-specific settings
-     (e. g. media type).  We are investigating solutions for this.
-
 
 ----------------
 
-B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
+C) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
 
   1) New printers supported in this release:
 
@@ -224,7 +241,7 @@ B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:
 
 ----------------
 
-C) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.0:
+D) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.0:
 
   1) New printers supported in this release:
 
