--- a/NEWS
+++ b/NEWS
@@ -138,6 +138,7 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
       * Canon inkjet printers:
 
 	Canon Pixma iX5000
+	Canon Pixma MP170
 
    3) Various fixes for the Canon iP4000, iP4200, and i560.
 
