Support Epson DX4050

--- a/NEWS
+++ b/NEWS
@@ -121,6 +121,7 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
 	Epson Stylus CX5600
 	Epson Stylus CX7400
 	Epson Stylus CX9400
+	Epson Stylus DX4050
 	Epson Stylus Photo RX595
 	Epson PM 670C
 
