--- a/NEWS
+++ b/NEWS
@@ -140,6 +140,7 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
 
 	Canon Pixma iX5000
 	Canon Pixma MP170
+	Canon Pixma MP180
 
    3) Various fixes for the Canon iP4000, iP4200, and i560.
 
