--- a/NEWS
+++ b/NEWS
@@ -138,9 +138,23 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
 
       * Canon inkjet printers:
 
+        Canon BJC5100
+        Canon BJC5500
+        Canon BJC8500
 	Canon Pixma iX5000
+	Canon Pixma iP5300
 	Canon Pixma MP170
 	Canon Pixma MP180
+
+      * Dye sublimation printers:
+
+	Canon SELPHY ES1 (*)
+	Canon SELPHY ES2 (*)
+	Canon SELPHY ES20(*)
+	Shinko CHC S9045
+
+	(*) Note that these printers may not work on all systems due to
+	    communication requirements.
 
    3) The following printers are no longer supported going forward in
       Gutenprint 5.1 and beyond.  We recommend that users switch to
@@ -346,21 +360,31 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
 	HP DesignJet 3500CP
 	HP DesignJet ColorPro CAD
 
-   4) Various fixes for the Canon iP4000, iP4200, and i560.
+   4) All native CUPS PPD files are now perfectly compliant with the
+      PPD specification, as tested under CUPS 1.2.
 
-   5) The paper size for the CD - Custom paper size has been changed
+   5) Borderless printing on the Epson Stylus Photo 2200 now works
+      correctly.
+
+   6) A bug in which certain data was not printed correctly by Canon
+      inkjet printers (in areas where the entire area was filled with
+      maximum color density, some lines could be silently discarded).
+
+   7) Various fixes for the Canon iP4000, iP4200, and i560.
+
+   8) The paper size for the CD - Custom paper size has been changed
       to 120 mm from 118.8 mm to allow correct printing from CUPS.
 
-   6) A compile problem on Solaris has been fixed.
+   9) A compile problem on Solaris has been fixed.
 
-   7) It is now possible to specify the printer model to all escputil
+   10) It is now possible to specify the printer model to all escputil
       commands, via the -m option.  It is no longer necessary to use
       the -u option to specify a new printer vs. an old printer.
 
-   8) The Postscript driver now sends device-specific settings, such
+   11) The Postscript driver now sends device-specific settings, such
       as media type, to the print command.
 
-   9) The Epson driver will not select resolutions higher than
+   12) The Epson driver will not select resolutions higher than
       5760x1440 for the automatic quality settings, as we have
       determined that many current printers offer poor quality at the
       bottom of the page with resolutions of 2880x2880 and 5760x2880.
@@ -369,7 +393,7 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.4:
       automatically selected by the Best or Ultra Photo quality
       settings.
 
-   10) A problem where in some cases certain options were not handled
+   13) A problem where in some cases certain options were not handled
       correctly by the CUPS driver has been fixed.
 
 
